# scancode-workbench

./: .eslintrc.json  .gitignore  .readthedocs.yml  .travis.yml  .travis_bintray.json  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  Release.md  about.html  aboutcode.ABOUT  appveyor.yml  archive_builder.py  assets.ABOUT  attribution.html  bower.json  build.py  build.sh  buildSourceArchive.js  credits.txt  deploy_rsa.enc  electron-builder.json  forge.config.js  index.html  jest.config.js  main.js  notes.txt  npm-shrinkwrap.json  old_build.py  package-lock.json  package-utils.js  package.json  packager.js  pyproject.toml  (+9 more)
.husky/: pre-commit
assets/: electron-quick-start.ABOUT  electron.ABOUT
docs/: .gitignore  .readthedocs.yml  Makefile  README.md  make.bat  requirements.txt
menu/: mainmenu.js
samples/: anglesharp.css.0.16.4-scan-results-without-text-referendces.json  aws-java-sdk-core-1.12.262-sources.jar-v32rc4results-todo.json  batik-1.7.1-scan.json  busybox-1.26.2-scan.json  busybox-1.29.2-scan.json  busybox-1.31.1-clipeu.json  conclusions.json  dropbear-2016.74-scan.json  dropbear-2018.76-scan.json  dropbear-2019.78-clipeu.json  fuse-2.9.1-scan.json  hazelcast-3293_v32.0.0rc3.json  mysql-connector-java-5.1.40-scan.json  old-e2fsprogs-1.45.6-clipeu.json  openssl-1.1.0e-scan.json  protobuf-3.0.0-scan.json  rapidjson-1.1.0-scan.json  sample-data.json  scancode-31.0.0b4-clipeu-37d4e0a.json  scancode-31.0.0b4-packages-37d4e0a.json  scancode-32.0.0rc4_python_sample-wref.json  (+2 more)
(+488 files in other folders)
